# simplon_projet2_orchestration

./: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  tutoriel_projet2.md
.github/workflows/: ci.yml
app/: main.py
app_api/: Dockerfile  main.py  pyproject.toml
app_api/data/: moncsv.csv
app_api/maths/: __init__.py
app_api/models/: models.py
app_api/modules/: __init.py  connect.py  crud.py
app_front/: Dockerfile  main.py  pyproject.toml
app_front/pages/: 0_insert.py  1_read.py
docs/source/: conf.py
tests/: test_api.py  test_math_csv.py
